2010-04-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Add abstraction: accumulate_range

	* b-divvy.h (accumulate_range): New func decl.
	* b-divvy.c (accumulate_range): New func.
	* rcsedit.c (naturalize): Use ‘accumulate_range’.
	* rcslex.c (getphrases): Likewise.

2010-04-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Use ‘fseeko’ more.

	* rcslex.c (Orewind): Use ‘fseeko’ instead of ‘fseek’.

2010-04-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Use ‘ftello’ more.

	* ci.c (main): Use ‘ftello’ instead of ‘ftell’.

2010-04-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Overhaul read-only file handling.

	* b-fro.h: New file.
	* b-fro.c: New file.
	* Makefile.am (libparts_a_SOURCES): Add b-fro.h, b-fro.c.
	* b-fb.h (Ieof): Delete func decl.
	* b-fb.c (Ieof): Delete func.
	* base.h [HAVE_SYS_MMAN_H]: Don't #include <sys/mman.h>.
	(large_memory, maps_memory): Delete #define:s.
	(RILE): Delete typedef.
	(declarecache, setupcache, cache, uncache, Igeteof, cachegeteof, Iget)
	(cacheget, cacheunget, Ifileno, Ioffset_type, Irewind, Itell, GETC):
	Delete macros.
	(Igetmore): Delete func decl.
	(open_rcsfile_fn_t): Update typedef.
	(parse_state): Delete member ‘rilebuf’.
	(flow): Update type of member ‘from’.
	(rcswriteopen, rcsfcmp, rcsreadopen, putdftext, getoldkeys):
	Update return value and parameter types and in func decls.
	(Ifclose, Izclose, hey_trundling, I_open, Iopen, testIeof)
	(Irewind): Delete func decls.
	(fexpandsym, getdiffcmd): Update parameter types and in func decls.
	(fastcopy): Delete func decl.
	(TEECHAR): New macro.

	Here,
	"I" means "#include "b-fro.h"";
	"U" means "Use ‘struct fro *’ instead of ‘RILE *’; remove caching;
	           use interface provided by b-fro.h and/or ‘TEECHAR’";
	"M" means "Merge ‘large_memory’/‘!large_memory’";
	"R" means "Rework to operate based on ‘STDIO_P (...)’ at runtime".
	* b-kwxout.c: I.
	(keyreplace, expandline): U.
	* b-kwxout.h (expctx): Update type of member ‘from’.
	* ci.c: I.